sleepybox1-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sleepybox1
  name: sleepybox1
spec:
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: sleepybox1
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
