sleepybox2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: sleepybox2
  name: sleepybox2
spec:
  containers:
  - args:
    - sleep
    - "3600"
    image: busybox
    name: sleepybox2
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Always
status: {}
