lab8server-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: lab8server
  name: lab8server
  namespace: restricted
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: lab8server
status:
  loadBalancer: {}
